MD-6372: Hide warnings of reflective access while connecting via sqlline